--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,25 @@
-pyspark>=3.0.0
-spark-nlp
-regex>=2.021.0.0
-redis>=4.0.0
+nvidia-pyindex
 CouchDB>=1.2
+accelerate>=1.12.0
+huggingface-hub>=0.35.3
+jupyterlab
+mcp>=1.22.0
+neo4j
+numpy
+nvidia-cuda-runtime-cu12
+pandas
 pymupdf4llm>=0.2.0
+pyspark>=3.5.7, <4.0
+python-dateutil>=2.9.0
+redis>=4.0.0
+regex>=2024.7.24
+requests>=2.32.3
+scikit-learn>=1.0.0
+scipy
+sentence-transformers>=3.0.1
+setuptools
+spark-nlp
+tesseract>=0.1.3
+tf-nightly[and-cuda]
+torch
+transformers>=4.44.0
