--- a/advanced-databases/docker-compose.yaml
+++ b/advanced-databases/docker-compose.yaml
@@ -40,6 +40,7 @@ services:
       # - ./neo4j-plugins:/plugins
       - /etc/letsencrypt:/etc/letsencrypt
       - /etc/ssl:/etc/ssl
+      - ./neo4j:/conf:/var/lib/neo4j
 
   #redis#
   redis:
