Just mount neo4j/conf, not the whole installation.

--- a/advanced-databases/docker-compose.yaml
+++ b/advanced-databases/docker-compose.yaml
@@ -40,7 +40,7 @@ services:
       # - ./neo4j-plugins:/plugins
       - /etc/letsencrypt:/etc/letsencrypt
       - /etc/ssl:/etc/ssl
-      - ./neo4j:/conf:/var/lib/neo4j
+      - ./neo4j/conf:/var/lib/neo4j/conf
 
   #redis#
   redis:
