--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-nvidia-pyindex
 CouchDB>=1.2
 accelerate>=1.12.0
 huggingface-hub>=0.35.3
@@ -20,11 +19,15 @@ sentence-transformers>=3.0.1
 setuptools
 spark-nlp
 tesseract>=0.1.3
-tf_nightly[and-cuda]==2.21.0.dev20251201
-torch==2.9.1+cu129
+# tf_nightly[and-cuda]==2.21.0.dev20251201
+tf[and-cuda]
+# torch==2.9.1+cu129
+torch
 transformers>=4.44.0
 tqdm
-tf-keras-nightly==2.21.0.dev20251201
+# tf-keras-nightly==2.21.0.dev20251201
+tf-keras
 paperscraper
 habanero
-git+https://github.com/josephisaacturner/pypaperretriever.git
+# git+https://github.com/josephisaacturner/pypaperretriever.git
+bibtexparser==2.0.0b3
