--- a/django/stdeb.cfg
+++ b/django/stdeb.cfg
@@ -4,7 +4,7 @@ Section: python
 Priority: optional
 Maintainer: La Monte Henry Piggy Yarroll <piggy@piggy.com>
 Copyright-File: debian/copyright
-Depends: python3-django, python3-djangorestframework, python3-redis, skol
+Depends: python3, python3-venv, skol
 Build-Depends: python3-all, debhelper (>= 9), dh-python, python3-setuptools
 Suite: stable
 Debian-Version: 1
