--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -4,7 +4,7 @@ Section: python
 Priority: optional
 Maintainer: La Monte Henry Piggy Yarroll <piggy@piggy.com>
 Copyright-File: debian/copyright
-Depends: python3-numpy, python3-pandas, python3-sklearn, python3-redis, python3-requests, python3-tqdm, python3-dateutil
+Depends: python3, python3-venv
 Build-Depends: python3-all, debhelper (>= 9), dh-python, python3-setuptools
 Suite: stable
 Debian-Version: 1
