--- a/django/debian/skol-django.service
+++ b/django/debian/skol-django.service
@@ -8,7 +8,7 @@ Type=simple
 User=skol
 Group=skol
 WorkingDirectory=/opt/skol/django
-ExecStart=/opt/skol/bin/with_skol_django skol-django runserver 0.0.0.0:8000
+ExecStart=/opt/skol/bin/with_skol_django skol-django runserver 127.0.0.1:8000
 Restart=on-failure
 RestartSec=5
 
@@ -16,7 +16,8 @@ RestartSec=5
 StandardOutput=append:/var/log/skol/skol-django.log
 StandardError=append:/var/log/skol/skol-django.log
 
-# Environment
+# Environment - load from file for customization
+EnvironmentFile=/opt/skol/django/skol-django.env
 Environment=DJANGO_SETTINGS_MODULE=skolweb.settings
 Environment=PYTHONUNBUFFERED=1
 
