--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "CouchDB>=1.2",
     "numpy",
     "pandas",
-    "pyspark>=3.5.0,<4.0",
+    "pyspark>=4.0.0",
     "redis>=4.0.0",
     "regex>=2024.0.0",
     "requests>=2.32.0",
