--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ numpy
 nvidia-cuda-runtime-cu12
 pandas
 pymupdf4llm>=0.2.0
-pyspark>=3.5.7, <4.0
+pyspark>=4.0.0
 python-dateutil>=2.9.0
 redis>=4.0.0
 regex>=2024.7.24
