Get feedback working on production host.

--- a/django/pyproject.toml
+++ b/django/pyproject.toml
@@ -62,6 +62,8 @@ include = [
     "search.*",
     "accounts",
     "accounts.*",
+    "contact",
+    "contact.*",
 ]
 
 [tool.setuptools.package-data]
