--- a/django/debian/skol-django.service
+++ b/django/debian/skol-django.service
@@ -17,7 +17,9 @@ StandardOutput=append:/var/log/skol/skol-django.log
 StandardError=append:/var/log/skol/skol-django.log
 
 # Environment - load from file for customization
+# The - prefix makes the file optional (won't fail if missing)
 EnvironmentFile=/opt/skol/django/skol-django.env
+EnvironmentFile=-/home/skol/.skol_env
 Environment=DJANGO_SETTINGS_MODULE=skolweb.settings
 Environment=PYTHONUNBUFFERED=1
 
