--- a/django/frontend/package.json
+++ b/django/frontend/package.json
@@ -11,17 +11,17 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pdf": "^7.7.0"
+    "react-pdf": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.90.0",
-    "webpack-cli": "^5.1.4",
-    "copy-webpack-plugin": "^12.0.2"
+    "webpack-cli": "^5.1.4"
   }
 }
