--- a/django/frontend/package.json
+++ b/django/frontend/package.json
@@ -11,12 +11,20 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pdf": "^10.3.0"
+    "clsx": "^2.0.0",
+    "dequal": "^2.0.3",
+    "make-cancellable-promise": "^2.0.0",
+    "make-event-props": "^2.0.0",
+    "merge-refs": "^2.0.0",
+    "pdfjs-dist": "5.4.296",
+    "tiny-invariant": "^1.0.0",
+    "warning": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.24.0",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
