--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ ml = [
     "sentence-transformers>=3.0.1",
     "accelerate>=1.12.0",
     "huggingface-hub>=0.35.0",
+    "peft>=0.7.0",
     "spark-nlp",
 ]
 pdf = [
@@ -138,6 +139,7 @@ py-modules = [
     "nomenclature",
     "paragraph",
     "skol_compat",
+    "taxa_json_translator",
     "taxon",
     "tokenizer",
 ]
