--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,9 @@ ml = [
     "accelerate>=1.12.0",
     "huggingface-hub>=0.35.0",
     "peft>=0.7.0",
+    "protobuf",
+    "sentencepiece",
+    "bitsandbytes",
     "spark-nlp",
 ]
 pdf = [
