Add pdf_section_extractor to package.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -141,6 +141,7 @@ py-modules = [
     "mycobank_species",
     "nomenclature",
     "paragraph",
+    "pdf_section_extractor",
     "skol_compat",
     "taxa_json_translator",
     "taxon",
