--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -4,3 +4,6 @@ django-cors-headers>=4.0.0
 redis>=4.5.0
 requests>=2.28.0
 dr-drafts-mycosearch
+
+# PostgreSQL support (optional - only needed if using PostgreSQL instead of SQLite)
+psycopg2-binary>=2.9.0
