--- a/django/frontend/package.json
+++ b/django/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-select": "^5.8.0",
     "react-code-blocks": "^0.1.6",
     "clsx": "^2.0.0",
     "dequal": "^2.0.3",
