--- a/django/frontend/package.json
+++ b/django/frontend/package.json
@@ -13,14 +13,10 @@
     "react-dom": "^18.2.0",
     "react-select": "^5.8.0",
     "react-code-blocks": "^0.1.6",
-    "clsx": "^2.0.0",
-    "dequal": "^2.0.3",
-    "make-cancellable-promise": "^2.0.0",
-    "make-event-props": "^2.0.0",
-    "merge-refs": "^2.0.0",
-    "pdfjs-dist": "5.4.296",
-    "tiny-invariant": "^1.0.0",
-    "warning": "^4.0.0"
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/search": "^3.12.0",
+    "pdfjs-dist": "^3.11.174"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
