Fetch lists of fungaria.

--- a/advanced-databases/docker-compose.yaml
+++ b/advanced-databases/docker-compose.yaml
@@ -48,7 +48,7 @@ services:
   redis:
     image: docker.io/redis:7.4
     restart: always
-    command: redis-server /usr/local/etc/redis/redis.conf
+    command: redis-server
     hostname: redis
     ports:
       - "127.0.0.1:6380:6379"
