--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,6 +1,7 @@
 Django>=4.2,<5.0
 djangorestframework>=3.14.0
 django-cors-headers>=4.0.0
+django-allauth>=0.57.0
 redis>=4.5.0
 requests>=2.28.0
 dr-drafts-mycosearch
