--- a/django/pyproject.toml
+++ b/django/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "djangorestframework>=3.14.0",
     "django-cors-headers>=4.0.0",
     "django-allauth>=0.57.0",
+    "PyJWT>=2.0.0",
+    "cryptography>=3.0.0",
     "redis>=4.5.0",
 ]
 
