--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "CouchDB>=1.2",
     "numpy",
     "pandas",
+    "pyarrow>=15.0.0",
     "pyspark>=4.0.0",
     "redis>=4.0.0",
     "regex>=2024.0.0",
