--- a/advanced-databases/redis.conf
+++ b/advanced-databases/redis.conf
@@ -75,8 +75,11 @@ rename-command FLUSHDB ""
 rename-command FLUSHALL ""
 rename-command DEBUG ""
 
-# Protected mode (additional layer, though TLS + password is primary security)
-protected-mode yes
+# Protected mode is disabled because:
+# 1. TLS is required for all connections
+# 2. Password authentication is required (admin user)
+# 3. Docker networking makes connections appear non-local, blocking legitimate access
+protected-mode no
 
 ################################## PERSISTENCE #################################
 
