--- a/advanced-databases/docker-compose.yaml
+++ b/advanced-databases/docker-compose.yaml
@@ -38,7 +38,7 @@ services:
       # - "NEO4J_dbms_directories_plugins=/plugins"
       # - "NEO4J_dbms_security_procedures_unrestricted=algo.*,apoc.*,gds.*"
     volumes:
-      - neo4j-data:/data
+      - /data/skol/neo4j/data:/data
       # - ./neo4j-plugins:/plugins
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - /etc/ssl:/etc/ssl:ro
@@ -85,14 +85,6 @@ services:
       - /etc/letsencrypt:/etc/letsencrypt
       - /etc/ssl:/etc/ssl
       - ./couchdb/etc:/opt/couchdb/etc
-
-##### volumes #####
-volumes:
-  neo4j-data:
-    driver: local
-  metastore-postgresql:
-    driver: local
-
 
 ##### networks #####
 networks:
