--- a/django/debian/postinst.template
+++ b/django/debian/postinst.template
@@ -33,6 +33,7 @@ chmod 755 /var/log/skol
 mkdir -p ${SKOL_HOME}
 mkdir -p ${SKOL_HOME}/bin
 mkdir -p ${SKOL_HOME}/staticfiles
+mkdir -p ${SKOL_HOME}/config
 chown -R skol:skol ${SKOL_HOME}
 
 # Migrate old non-versioned layout if needed (but don't switch yet)
@@ -92,17 +93,34 @@ EOF
 chmod 755 ${SKOL_HOME}/bin/with_skol_django_new
 chown skol:skol ${SKOL_HOME}/bin/with_skol_django_new
 
-# Create environment file for systemd service customization
-# Write to the new version directory, not the symlink
-if [ ! -f ${INSTALL_DIR}/skol-django.env ]; then
-    # Check if there's an existing env file to copy from the current version
+# Create shared config directory
+mkdir -p ${SKOL_HOME}/config
+chown skol:skol ${SKOL_HOME}/config
+
+# Config file location (shared across versions)
+CONFIG_FILE="${SKOL_HOME}/config/skol-django.env"
+
+# Migrate config from old version-specific location if needed
+if [ ! -f "$CONFIG_FILE" ]; then
+    # Check for config in current version directory (old layout)
     if [ -L "$DJANGO_SYMLINK" ] && [ -f "${DJANGO_SYMLINK}/skol-django.env" ]; then
-        echo "Copying existing environment configuration to new version..."
-        cp "${DJANGO_SYMLINK}/skol-django.env" "${INSTALL_DIR}/skol-django.env"
+        echo "Migrating config from ${DJANGO_SYMLINK}/skol-django.env to shared location..."
+        cp "${DJANGO_SYMLINK}/skol-django.env" "$CONFIG_FILE"
+    # Check for config in new version directory (shouldn't exist, but just in case)
+    elif [ -f "${INSTALL_DIR}/skol-django.env" ]; then
+        echo "Migrating config from ${INSTALL_DIR}/skol-django.env to shared location..."
+        cp "${INSTALL_DIR}/skol-django.env" "$CONFIG_FILE"
     else
-        cat > ${INSTALL_DIR}/skol-django.env << 'ENVEOF'
+        # Create default config file
+        echo "Creating default config at $CONFIG_FILE..."
+        cat > "$CONFIG_FILE" << 'ENVEOF'
 # SKOL Django Environment Configuration
+# This file persists across version upgrades
 # Edit this file to customize the Django environment
+
+# URL path prefix when running at a subpath (e.g., /skol)
+# Set to empty if running at the root of a domain
+FORCE_SCRIPT_NAME=/skol
 
 # Set to True when running behind HTTPS reverse proxy
 SKOL_HTTPS=False
@@ -110,11 +128,6 @@ SKOL_HTTPS=False
 # Comma-separated list of trusted origins for CSRF protection
 # Example: https://skol.example.com,https://www.skol.example.com
 CSRF_TRUSTED_ORIGINS=
-
-# URL path prefix when running at a subpath (e.g., /skol)
-# Leave empty if running at the root of a domain
-# Example: FORCE_SCRIPT_NAME=/skol
-FORCE_SCRIPT_NAME=
 
 # Redis configuration
 REDIS_HOST=localhost
@@ -137,9 +150,40 @@ COUCHDB_PASSWORD=
 # POSTGRES_PASSWORD=
 ENVEOF
     fi
+else
+    echo "Preserving existing config at $CONFIG_FILE"
 fi
-chown skol:skol ${INSTALL_DIR}/skol-django.env
-chmod 640 ${INSTALL_DIR}/skol-django.env
+chown skol:skol "$CONFIG_FILE"
+chmod 640 "$CONFIG_FILE"
+
+# Create shared data directory for SQLite database
+DJANGO_DATA_DIR="${SKOL_HOME}/data/django"
+mkdir -p "$DJANGO_DATA_DIR"
+chown skol:skol "$DJANGO_DATA_DIR"
+
+# Migrate database from version-specific location if needed
+SHARED_DB="${DJANGO_DATA_DIR}/db.sqlite3"
+if [ ! -f "$SHARED_DB" ]; then
+    # Check for database in current version directory (via symlink)
+    if [ -L "$DJANGO_SYMLINK" ] && [ -f "${DJANGO_SYMLINK}/db.sqlite3" ]; then
+        echo "Migrating database from ${DJANGO_SYMLINK}/db.sqlite3 to shared location..."
+        cp "${DJANGO_SYMLINK}/db.sqlite3" "$SHARED_DB"
+        chown skol:skol "$SHARED_DB"
+        echo "Database migrated to $SHARED_DB"
+    # Check for database in any previous version directory
+    elif [ -d "${SKOL_HOME}/django-versions" ]; then
+        # Find the most recent db.sqlite3 from any version
+        LATEST_DB=$(find "${SKOL_HOME}/django-versions" -name "db.sqlite3" -type f -printf '%T@ %p\n' 2>/dev/null | sort -rn | head -1 | cut -d' ' -f2-)
+        if [ -n "$LATEST_DB" ] && [ -f "$LATEST_DB" ]; then
+            echo "Migrating database from $LATEST_DB to shared location..."
+            cp "$LATEST_DB" "$SHARED_DB"
+            chown skol:skol "$SHARED_DB"
+            echo "Database migrated to $SHARED_DB"
+        fi
+    fi
+else
+    echo "Using existing database at $SHARED_DB"
+fi
 
 # Run database migrations against the NEW version
 echo "Running database migrations..."
