--- a/django/debian/postinst.template
+++ b/django/debian/postinst.template
@@ -54,6 +54,7 @@ echo "Upgrading pip..."
 ${SKOL_DJANGO_VENV}/bin/pip install --upgrade pip
 
 echo "Installing all packages from local wheels..."
+${SKOL_DJANGO_VENV}/bin/pip install --force-reinstall --no-deps ${SKOL_HOME}/wheels/*.whl
 ${SKOL_DJANGO_VENV}/bin/pip install ${SKOL_HOME}/wheels/*.whl
 
 # Set ownership of venv to skol user
