Attempt to precache the sources information. Does not work.

--- a/debian/postinst.template
+++ b/debian/postinst.template
@@ -221,7 +221,7 @@ chmod 755 ${INSTALL_DIR}/bin/with_skol
 chown skol:skol ${INSTALL_DIR}/bin/with_skol
 
 # Create symlinks for each command in the version-specific bin directory
-for cmd in ingest train_classifier predict_classifier extract_taxa_to_couchdb embed_taxa taxa_to_json build_vocab_tree manage_fungaria watch_install watch_incremental rebuild_redis; do
+for cmd in ingest train_classifier predict_classifier extract_taxa_to_couchdb embed_taxa taxa_to_json build_vocab_tree build_sources_stats manage_fungaria watch_install watch_incremental rebuild_redis; do
     ln -sf with_skol ${INSTALL_DIR}/bin/${cmd}
 done
 
