Fix import of internetarchive.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ ingest = [
     "beautifulsoup4",
     "feedparser",
     "habanero",
+    "internetarchive",
     "paperscraper",
     # bibtexparser moved to core dependencies (required by ingestors package)
 ]
